force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/fields/clofor_com_cfs__AssetID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AssetID__c</fullName>
    <label>ASSET ID</label>
    <referenceTo>clofor_com_cfs__ASSET__c</referenceTo>
    <relationshipLabel>ASSET TRANSFER</relationshipLabel>
    <relationshipName>AsseTransfer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>