force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/fields/clofor_com_cfs__AssetIdentificationCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AssetIdentificationCode__c</fullName>
    <formula>clofor_com_cfs__AssetID__r.clofor_com_cfs__AssetIdentificationCode__c</formula>
    <label>ASSET IDENTIFICATION CODE</label>
    <type>Text</type>
</CustomField>