force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/fields/clofor_com_cfs__AssetTransferName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AssetTransferName__c</fullName>
    <label>ASSET TRANSFER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>