force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/fields/clofor_com_cfs__DebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>ASSET TRANSFER (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>DebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>