force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/fields/clofor_com_cfs__PICOfReceivingCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICOfReceivingCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of RECEIVING COMPANY</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ASSET TRANSFER</relationshipLabel>
    <relationshipName>PICReceivingCompany</relationshipName>
    <type>Lookup</type>
</CustomField>