force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/fields/clofor_com_cfs__ReceivingCompanyName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceivingCompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RECEIVING COMPANY NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ASSET RECEIVER</relationshipLabel>
    <relationshipName>AssetTransfer</relationshipName>
    <type>Lookup</type>
</CustomField>