force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/fields/clofor_com_cfs__TransferDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransferDate__c</fullName>
    <label>TRANSFER DATE</label>
    <type>Date</type>
</CustomField>