force-app/main/default/objects/clofor_com_cfs__AssetTransfer__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__AssetTransferName__c</columns>
    <columns>clofor_com_cfs__AssetID__c</columns>
    <columns>clofor_com_cfs__ReceivingCompanyName__c</columns>
    <columns>clofor_com_cfs__TransferType__c</columns>
    <columns>clofor_com_cfs__TransferDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>